update migrations and add endpoints
